k8s_up_and_running/host-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: host-ingress
spec:
    rules:
        - host: alpaca.vascoalramos.me
          http:
              paths:
                  - backend:
                        serviceName: alpaca
                        servicePort: 8080
