k8s_up_and_running/nginx-host-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: host-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    rules:
        - host: alpaca.vascoalramos.me
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: alpaca
                        servicePort: 8080
        - host: bandicoot.vascoalramos.me
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: bandicoot
                        servicePort: 8080
