k8s_up_and_running/path-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: path-ingress
spec:
    rules:
        - http:
              paths:
                  - path: "/"
                    backend:
                        serviceName: alpaca
                        servicePort: 8080
                  - path: "/b/"
                    backend:
                        serviceName: bandicoot
                        servicePort: 8080
